<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/expense_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"
                android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/expense_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expense_amount_label"/>

            <EditText
                android:id="@+id/expense_amount"
                android:layout_width="292dp"
                android:layout_height="93dp"
                android:hint="@string/expense_amount_hint"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_category"
        android:layout_marginTop="8dp"
        android:hint="Select a Category">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="none"
            android:text="@string/expense_select" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_details"
        android:hint="@string/expense_details_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/expense_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/expense_date_time_label"/>

    <Button
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/expense_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_date"/>

    <Button
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/expense_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_time"/>


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/expense_others_label"/>

    <Button
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/expense_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expense_contact_text"
        app:icon="@drawable/ic_contact"/>

    <Button
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/expense_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expense_report_text"
        app:icon="@drawable/ic_report"/>

    <Button
        android:id="@+id/expense_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expense_delete_text"
        android:textColor="@android:color/holo_red_light" />

</LinearLayout>
</ScrollView>